# Math-Client-Library

./: CMakeLists.txt  README.md
MathClient/: CMakeLists.txt
MathClient/src/: MathClient.cpp
MathLibrary/: CMakeLists.txt
MathLibrary/src/: MathLibrary.cpp  MathLibrary.h
